Add sections to navigation

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
         <h1 class="headings page__heading">Jubilee Austen</h1>
         <nav class="navigation">
           <ul class="navigation__list">
+            <li class="navigation__list-item"><a href="#">Home</a></li>
             <li class="navigation__list-item"><a href="#about">About</a></li>
             <li class="navigation__list-item"><a href="#skills">Skills</a></li>
-            <li class="navigation__list-item"><a href="contact">Contact</a></li>
+            <li class="navigation__list-item">
+              <a href="./projects/index.html">Contact</a>
+            </li>
+            <li class="navigation__list-item">
+              <a href="#projects">Projects</a>
+            </li>
           </ul>
         </nav>
         <h2 class="headings intro__heading">
