--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <li class="navigation__list-item"><a href="#about">About</a></li>
             <li class="navigation__list-item"><a href="#skills">Skills</a></li>
             <li class="navigation__list-item">
-              <a href="./projects/index.html">Contact</a>
+              <a href="#contact">Contact</a>
             </li>
             <li class="navigation__list-item">
-              <a href="#projects">Projects</a>
+              <a href="./projects/index.html">Projects</a>
             </li>
           </ul>
         </nav>
