Update image sizing and project classes

--- a/projects/index.html
+++ b/projects/index.html
@@ -47,43 +47,45 @@
       </div>
     </header>
     <main>
-      <section id="projects-section">
-        <h2>Projects</h2>
-        <div class="project">
-          <img
-            src="../img/rogue-pickings.png"
-            alt="image of Rogue Pickings site with green beans photo"
-          />
-          <h3>Rogue Pickings</h3>
-          <p>
-            A simple home page perfect for a pop-up restaurant or food truck.
-            Originally a static website, I converted it into a responsive design
-            using Flexbox.
-          </p>
-        </div>
-        <div class="project">
-          <img
-            src="../img/unplugged.png"
-            alt="image of Unplugged retreat site with person on forest bridge"
-          />
-          <h3>Unplugged</h3>
-          <p>
-            A multi-page responsive website coded with Flexbox. This versatile
-            design has sections, including a cards design pattern, that can be
-            repurposed for different sites.
-          </p>
-        </div>
-        <div class="project">
-          <img
-            src="../img/guess-the-word-game.png"
-            alt="image of homepage for word guessing game"
-          />
-          <h3>Guess the Word Game</h3>
-          <p>
-            Players guess the word by entering one letter at a time. If the
-            player guesses all the letters correctly before they use up their
-            allotted guess, they win!
-          </p>
+      <section class="projects-section">
+        <div class="content-wrapper">
+          <h2 class="headings">Projects</h2>
+          <div class="project">
+            <img
+              src="../img/rogue-pickings.png"
+              alt="image of Rogue Pickings site with green beans photo"
+            />
+            <h3 class="subheading">Rogue Pickings</h3>
+            <p class="paragraph">
+              A simple home page perfect for a pop-up restaurant or food truck.
+              Originally a static website, I converted it into a responsive
+              design using Flexbox.
+            </p>
+          </div>
+          <div class="project">
+            <img
+              src="../img/unplugged.png"
+              alt="image of Unplugged retreat site with person on forest bridge"
+            />
+            <h3 class="subheading">Unplugged</h3>
+            <p class="paragraph">
+              A multi-page responsive website coded with Flexbox. This versatile
+              design has sections, including a cards design pattern, that can be
+              repurposed for different sites.
+            </p>
+          </div>
+          <div class="project">
+            <img
+              src="../img/guess-the-word-game.png"
+              alt="image of homepage for word guessing game"
+            />
+            <h3 class="subheading">Guess the Word Game</h3>
+            <p class="paragraph">
+              Players guess the word by entering one letter at a time. If the
+              player guesses all the letters correctly before they use up their
+              allotted guess, they win!
+            </p>
+          </div>
         </div>
       </section>
     </main>
